Half of test cases created